<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="showCourseMaterials">

    <ImageView
        android:id="@+id/background_view"
        android:layout_width="473dp"
        android:layout_height="881dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        app:srcCompat="@drawable/course_selection_background" />

    <View
        android:id="@+id/title_rectangle"
        android:layout_width="393sp"
        android:layout_height="161sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="676dp"
        android:background="@drawable/title_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/nsu_helper"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/title_rectangle"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/first_course_button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-light"
        android:onClick="showFirstCourseMaterials"
        android:text="@string/first_course"
        android:textSize="30sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_rectangle" />

    <Button
        android:id="@+id/second_course_button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-light"
        android:onClick="showCourseMaterials"
        android:text="@string/second_course"
        android:textSize="30sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_course_button" />

    <Button
        android:id="@+id/third_course_button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-light"
        android:onClick="showCourseMaterials"
        android:text="@string/third_course"
        android:textSize="30sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_course_button" />

    <Button
        android:id="@+id/fourth_course_button"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-light"
        android:onClick="showCourseMaterials"
        android:text="@string/fourth_course"
        android:textSize="30sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_course_button" />

    <Button
        android:id="@+id/feedback_button"
        android:layout_width="166dp"
        android:layout_height="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-medium"
        android:onClick="showFeedback"
        android:text="@string/feedback"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>