<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#757575">

    <View
        android:id="@+id/title_rectangle"
        android:layout_width="393dp"
        android:layout_height="161dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="676dp"
        android:background="@drawable/title_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/feedback_field"
        android:layout_width="354dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="180dp"
        android:background="@drawable/feedback_rectangle"
        android:hint="@string/feedback_text"
        android:paddingStart="10sp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/title_rectangle" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/nsu_helper"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="@+id/title_rectangle"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="359dp"
        android:layout_height="341dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="17dp"
        android:contentDescription="@string/feedbacks"
        android:background="#CA9E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_rectangle">

        <LinearLayout
            android:id="@+id/feedbacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/send_button"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-medium"
        android:onClick="sendFeedback"
        android:text="@string/send"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_field" />

    <Button
        android:id="@+id/go_back_button"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2A6577"
        android:fontFamily="sans-serif-medium"
        android:onClick="goBack"
        android:text="@string/back"
        android:textSize="20sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>